--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,28 @@
-<nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>&nbsp;
-  <a routerLink="/counter" routerLinkActive="active">Counter Demo</a>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">NgRx</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a routerLink="/home" routerLinkActive="active">Home</a>&nbsp;
+      </li>
+      <li class="nav-item">
+        <a routerLink="/counter" routerLinkActive="active">Counter Demo</a>
+      </li>  
+    </ul>
+  </div>  
 </nav>
-<router-outlet></router-outlet>
+
+<div class="container" style="margin-top:30px">
+  <router-outlet></router-outlet>
+</div>  
+
+<footer class="footer" style="position: absolute; bottom: 0;width: 100%;height: 60px;line-height: 60px;background-color: #f5f5f5;">
+  <div class="container">
+    <span class="text-muted">Place sticky footer content here.</span>
+  </div>
+</footer>
+
 
