--- a/src/app/counter-container/counter-container.component.html
+++ b/src/app/counter-container/counter-container.component.html
@@ -1,5 +1,5 @@
 <app-counter
-  [total]="counter"
+  [total]="totalCount"
   (increment)="increment()"
   (decrement)="decrement()"
   (reset)="reset()"
